# portable_time

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  ptime.c  ptime.h  ptime_test.c
inc/: ptime.h
src/: ptime.c  ptime_test.c
